--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,12 +1,23 @@
 .Card {
-  height: 200px;
+  height: 250px;
   margin: 20px;
   padding: 20px;
   border: 1px solid #9191a1;
   border-radius: 20px;
 }
 
-.Card > * {
+.Card .actions,
+.Card .content > div {
   width: 100%;
 }
+
+.Card .actions button { 
+  height: 30px;
+  padding: 5px 10px;
+  margin: 10px;
+  background-color: goldenrod;
+  border-radius: 15px;
+  color: darkblue;
+}
+
 
