migrated to axios
fixing forms

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -117,6 +117,10 @@ input, button, textarea, select {
   justify-content: space-around;
 }
 
+.content-evenly {
+  justify-content: space-evenly;
+}
+
 .content-between {
   justify-content: space-between;
 }
