--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -2,6 +2,14 @@
   background-color: #d7d7e0;
 }
 
+.Gallery > .actions {
+  box-shadow: 0 0 2px 0 #738fba;
+}
+
+.Gallery .content {
+  padding: 25px 0;
+}
+
 .Gallery .actions button {
   height: 30px;
   padding: 5px 10px;
