--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,23 +1,23 @@
 .Card {
-  height: 250px;
+  min-height: 250px;
   margin: 20px;
   padding: 20px;
   border: 1px solid #9191a1;
   border-radius: 20px;
 }
 
-.Card .actions,
-.Card .content > div {
-  width: 100%;
+.Card .actions {
+  margin-top: 20px;
 }
 
-.Card .actions button { 
-  height: 30px;
-  padding: 5px 10px;
-  margin: 10px;
-  background-color: goldenrod;
-  border-radius: 15px;
-  color: darkblue;
-}
+@media (max-width: 512px) {
+  .Card {
+    width: 65%;
+  }
 
+  .actions {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
